<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="IO" Id="{b6a824ad-ba69-433d-98ef-92de3627450c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//INPUTS	
	encoder1_A AT %I* : BOOL;
	encoder1_B AT %I* : BOOL;
	encoder2_A AT %I* : BOOL;
	encoder2_B AT %I* : BOOL;
	
// INPUTS SIMULACION
	alfa_sim : REAL;
	beta_sim : REAL;
	
//OUTPUTS	
	blink AT %Q* : BOOL := 1;
	valv_alfa_mas AT %Q* : BOOL;
	valv_alfa_menos AT %Q* : BOOL;
	valv_beta_mas AT %Q* : BOOL;
	valv_beta_menos AT %Q* : BOOL;	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>