<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="EncoderMeas" Id="{0d96bc1c-ffb1-440d-b63c-eed900a16197}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM EncoderMeas
VAR
	
encoder1:ENCODERPULSEtoANGLE;
encoder2:ENCODERPULSEtoANGLE;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Dónde estoy?

//ALFA
///Realidad
IF NOT(GVL.Scarafitti.simulacion_alfa) THEN
////Calibración
encoder1.angulo_calibrado:=GVL.Pi;
encoder1.b_calibrado:=IO.tope_alfa;
////Medir ángulos
encoder1.A:=IO.encoder1_A;
encoder1.B:=IO.encoder1_B;
encoder1();
GVL.alfa:=encoder1.angle;
ELSE
///Simulación
GVL.alfa:=IO.alfa_sim;
END_IF

//BETA
///Realidad
IF NOT(GVL.Scarafitti.simulacion_beta) THEN
////Calibración
encoder2.angulo_calibrado:=0;
encoder2.b_calibrado:=IO.tope_beta;
////Medir ángulos
encoder2.A:=IO.encoder2_A;
encoder2.B:=IO.encoder2_B;
encoder2();
GVL.beta:=encoder2.angle;
ELSE
///Simulación
GVL.beta:=IO.beta_sim;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="EncoderMeas">
      <LineId Id="6" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="8" Count="2" />
      <LineId Id="5" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="61" Count="4" />
      <LineId Id="67" Count="0" />
      <LineId Id="69" Count="1" />
      <LineId Id="74" Count="2" />
      <LineId Id="78" Count="0" />
      <LineId Id="82" Count="1" />
      <LineId Id="85" Count="0" />
      <LineId Id="60" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>